--- a/smart-ui-docs/package.json
+++ b/smart-ui-docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-ui-docs",
+  "name": "@smart-ui/docs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^4.2.6",
     "element-plus": "^2.13.0",
-    "smart-form": "file:../smart-ui",
+    "@smart-ui/core": "file:../smart-ui",
     "vue": "^3.3.4",
     "vuepress-theme-plume": "^1.0.0-rc.185"
   },
@@ -26,14 +26,17 @@
     "vuepress": "^2.0.0-rc.26",
     "vuepress-theme-hope": "^2.0.0-rc.102"
   },
-  "description": "Smart UI 文档项目，用于展示 SmartForm 和 SmartTable 组件的功能和使用方法。",
+  "description": "@smart-ui 文档项目，用于展示 SmartForm 和 SmartTable 组件的功能和使用方法。",
   "keywords": [
-    "smart-ui",
+    "@smart-ui/core",
     "vuepress",
     "documentation",
     "smart-form",
     "smart-table"
   ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "volta": {
+    "node": "22.21.1"
+  }
 }
