feat: 添加部署脚本并修复SSR兼容性问题
- 在package.json中添加docs:deploy脚本用于构建和部署文档
- 修复FullScreenDemo和FullScreenModal组件中的SSR兼容性问题
- 更新404页面和相关组件文件
- 添加新的JS资源文件并删除旧文件

--- a/smart-ui-docs/package.json
+++ b/smart-ui-docs/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "npm run docs:build && rm -rf ../docs && mv docs/.vuepress/dist ../docs"
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
